# codemate

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  test.py
.github/workflows/: ci.yml
src/codemate/: __main__.py
